--- a/contacts/public/login.ejs
+++ b/contacts/public/login.ejs
@@ -5,7 +5,7 @@
 <title>Contacts</title>
 <base href="/">
 <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
-<link href='https://bootswatch.com/cerulean/bootstrap.min.css'
+<link href='https://bootswatch.com/slate/bootstrap.min.css'
 	rel='stylesheet' type='text/css'>
 </head>
 <body style="font-family: Georgia, Serif;">
