--- a/contacts/public/views/products.html
+++ b/contacts/public/views/products.html
@@ -10,7 +10,8 @@
 			<div ng-switch-when="true"
 				class="alert alert-dismissible alert-danger">
 				<button type="button" class="close" data-dismiss="alert">&times;</button>
-				<strong>Oops!!! No results found for '{{::CommonCode.term}}'</strong>
+				<strong>Oops!!! No results found for
+					'{{::CommonCode.term}}'</strong>
 			</div>
 			<div ng-switch-default>
 				<p>
@@ -21,47 +22,48 @@
 				<div class="row">
 					<div class="col-xs-12 col-md-8">
 						<ul class="pagination" style="margin: 2px 0;">
-							<li ng-class="{'disabled' : currentPage <= 1}">
-								<a ng-if="currentPage<=1" href="#" aria-label="First">
+							<li ng-class="{'disabled' : currentPage <= 1}"><a
+								ng-if="currentPage<=1" href="#" aria-label="First"> <span
+									aria-hidden="true">First</span>
+							</a> <a ng-if="currentPage>1"
+								href="/products/{{::CommonCode.term}}/0/10" aria-label="First">
 									<span aria-hidden="true">First</span>
-								</a>
-								<a ng-if="currentPage>1" href="/products/{{::CommonCode.term}}/0/10" aria-label="First">
-									<span aria-hidden="true">First</span>
-								</a>
+							</a></li>
+							<li ng-class="{'disabled' : currentPage <= 1}"><a
+								ng-if="currentPage<=1" href="#" aria-label="Previous"> <span
+									aria-hidden="true">&laquo;</span>
+							</a> <a ng-if="currentPage>1"
+								href="/products/{{::CommonCode.term}}/{{::((currentPage)-2)*10}}/10"
+								aria-label="Previous"> <span aria-hidden="true">&laquo;</span>
+							</a></li>
+							<li data-ng-repeat="i in CommonCode.range(startPage, endPage)"
+								ng-class="{'active' : currentPage == i}"><a
+								href="/products/{{::CommonCode.term}}/{{(i-1)*10}}/10">{{i}}</a>
 							</li>
-							<li ng-class="{'disabled' : currentPage <= 1}">
-								<a ng-if="currentPage<=1" href="#" aria-label="Previous">
-									<span aria-hidden="true">&laquo;</span>
-								</a>
-								<a ng-if="currentPage>1" href="/products/{{::CommonCode.term}}/{{::((currentPage)-2)*10}}/10" aria-label="Previous">
-									<span aria-hidden="true">&laquo;</span>
-								</a>
-							</li>
-							<li data-ng-repeat="i in CommonCode.range(startPage, endPage)" ng-class="{'active' : currentPage == i}">
-								<a href="/products/{{::CommonCode.term}}/{{(i-1)*10}}/10">{{i}}</a>
-							</li>
-							<li ng-class="{'disabled' : currentPage >= totalPages}">
-								<a ng-if="currentPage >= totalPages" href="#" aria-label="Next">
+							<li ng-class="{'disabled' : currentPage >= totalPages}"><a
+								ng-if="currentPage >= totalPages" href="#" aria-label="Next">
 									<span aria-hidden="true">&raquo;</span>
-								</a>
-								<a ng-if="currentPage < totalPages" href="/products/{{::CommonCode.term}}/{{::(currentPage)*10}}/10" aria-label="Next">
-									<span aria-hidden="true">&raquo;</span>
-								</a>
-							</li>
-							<li ng-class="{'disabled' : currentPage >= totalPages}">
-								<a ng-if="currentPage >= totalPages" href="#" aria-label="Next">
+							</a> <a ng-if="currentPage < totalPages"
+								href="/products/{{::CommonCode.term}}/{{::(currentPage)*10}}/10"
+								aria-label="Next"> <span aria-hidden="true">&raquo;</span>
+							</a></li>
+							<li ng-class="{'disabled' : currentPage >= totalPages}"><a
+								ng-if="currentPage >= totalPages" href="#" aria-label="Next">
 									<span aria-hidden="true">Last</span>
-								</a>
-								<a ng-if="currentPage < totalPages" href="/products/{{::CommonCode.term}}/{{::(totalPages-1)*10}}/10" aria-label="Last">
-									<span aria-hidden="true">Last</span>
-								</a>
-							</li>
+							</a> <a ng-if="currentPage < totalPages"
+								href="/products/{{::CommonCode.term}}/{{::(totalPages-1)*10}}/10"
+								aria-label="Last"> <span aria-hidden="true">Last</span>
+							</a></li>
 						</ul>
 					</div>
-					<div class="col-xs-6 col-md-4" style="font-size: 18px">
+					<div class="col-xs-6 col-md-4">
 						<div class="pull-right">
-							<span class="label label-primary">Seconds <span	class="badge progress-bar-danger">{{::secondsTook}}</span></span>
-							<span class="label label-primary">Results <span class="badge progress-bar-warning">{{::totalRecords}}</span></span>
+							<button class="btn btn-default" type="button">
+								Seconds <span class="badge">{{::secondsTook}}</span>
+							</button>
+							<button class="btn btn-danger" type="button">
+								Results <span class="badge">{{::totalRecords}}</span>
+							</button>
 						</div>
 					</div>
 				</div>
