--- a/contacts/public/views/nav.html
+++ b/contacts/public/views/nav.html
@@ -21,7 +21,7 @@
 		</ul>
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-class="{ active: PAGE === 'settings' }"><a
-				href="/settings"> <span class="glyphicon glyphicon-cog">Settings</span>
+				href="/settings">Settings
 			</a>
 			<li><a href="/logout" target="_self">Log Out</a></li>
 		</ul>
